updated file architecture

--- a/c_test/makefile
+++ b/c_test/makefile
@@ -3,7 +3,7 @@ CFLAGS = -O3 -march=native
 LDFLAGS = -lgsl -lm
 SRC = main.c $(wildcard c_frame/*.c)
 OBJ = $(SRC:.c=.o)
-TARGET = main
+TARGET = main.out
 
 all: $(TARGET)
 
@@ -17,4 +17,4 @@ clean:
 	rm -f $(OBJ) $(TARGET)
 
 run:
-	./main
+	./main.out
