--- a/c_test/makefile
+++ b/c_test/makefile
@@ -3,18 +3,26 @@ CFLAGS = -O3 -march=native
 LDFLAGS = -lgsl -lm
 SRC = main.c $(wildcard c_frame/*.c)
 OBJ = $(SRC:.c=.o)
+DEP = $(OBJ:.o=.d)
 TARGET = main.out
+
+.PHONY: all clean run
 
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+	$(CC) $(OBJ) -o $@ $(LDFLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-clean:
-	rm -f $(OBJ) $(TARGET)
+%.d: %.c
+	$(CC) $(CFLAGS) -M -o $@ $<
 
-run:
-	./main.out
+clean:
+	rm -f $(OBJ) $(DEP) $(TARGET)
+
+run: $(TARGET)
+	./$(TARGET)
+
+-include $(DEP)
