removed -O3 to prevent optimizing out certain calls

--- a/c_test/makefile
+++ b/c_test/makefile
@@ -1,28 +1,20 @@
 CC = gcc
-CFLAGS = -O3 -march=native
+CFLAGS = -march=native
 LDFLAGS = -lgsl -lm
 SRC = main.c $(wildcard c_frame/*.c)
 OBJ = $(SRC:.c=.o)
-DEP = $(OBJ:.o=.d)
 TARGET = main.out
-
-.PHONY: all clean run
 
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CC) $(OBJ) -o $@ $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-%.d: %.c
-	$(CC) $(CFLAGS) -M -o $@ $<
-
 clean:
-	rm -f $(OBJ) $(DEP) $(TARGET)
+	rm -f $(OBJ) $(TARGET)
 
-run: $(TARGET)
-	./$(TARGET)
-
--include $(DEP)
+run:
+	./main.out
