added base cuda framework

--- a/c_test/makefile
+++ b/c_test/makefile
@@ -1,20 +1,32 @@
 CC = gcc
-CFLAGS = -O3 -march=native
-LDFLAGS = -lgsl -lm
-SRC = main.c $(wildcard c_frame/*.c)
-OBJ = $(SRC:.c=.o)
+NVCC = nvcc
+CFLAGS = -O3 -march=native -Ic_frame
+NVCCFLAGS = -O3 -Ic_frame
+LDFLAGS = -lgsl -lm -lcudart
+
+C_SRC = main.c $(wildcard c_frame/*.c)
+CUDA_SRC = c_frame/kernel.cu
+C_OBJ = $(C_SRC:.c=.o)
+CUDA_OBJ = $(CUDA_SRC:.cu=.o)
+OBJ = $(C_OBJ) $(CUDA_OBJ)
+
 TARGET = main.out
 
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ $(OBJ) $(LDFLAGS)
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CFLAGS) -c $< -o $@
+
+%.o: %.cu
+	$(NVCC) $(NVCCFLAGS) -c $< -o $@
 
 clean:
 	rm -f $(OBJ) $(TARGET)
 
 run: $(TARGET)
-	./main.out
+	./$(TARGET)
+
+.PHONY: all clean run
