--- a/python_test/pyproject.toml
+++ b/python_test/pyproject.toml
@@ -3,10 +3,10 @@ name = "python-test"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 dependencies = [
     "cupy-cuda12x>=13.4.1",
-    "jax>=0.6.2",
+    "jax[cuda12]>=0.5.3",
     "numpy>=2.2.6",
     "pyopencl>=2025.2.4",
     "torch>=2.7.1",
